--- a/system/helmfile.yaml
+++ b/system/helmfile.yaml
@@ -13,7 +13,8 @@ repositories:
     url: https://metallb.github.io/metallb
   - name: sealed-secrets
     url: https://bitnami-labs.github.io/sealed-secrets
-
+  - name: fossorial
+    url: https://charts.fossorial.io
 releases:
   - name: kubeseal
     namespace: kubeseal
@@ -22,6 +23,21 @@ releases:
     version: 2.17.7
     values:
       - "./kubeseal/values.yaml"
+  - name: pangolin
+    namespace: pangolin
+    createNamespace: true
+    chart: fossorial/newt
+    version: 1.1.0
+    values:
+      - "./pangolin/values.yaml"
+    hooks:
+      - events: ["presync"]
+        showlogs: true
+        command: kubectl
+        args:
+          - apply
+          - -f
+          - ./pangolin/credentials.yaml
   - name: metallb
     namespace: metallb
     createNamespace: true
