--- a/apps/littlelink/kustomization.yaml
+++ b/apps/littlelink/kustomization.yaml
@@ -1,3 +1,10 @@
+namespace: littlelink
+
+labels:
+  - pairs:
+      homelab.imkavin.dev/app: littlelink-server
+    includeSelectors: false
+
 resources:
   - deployment.yaml
   - service.yaml
