--- a/apps/karakeep/.config
+++ b/apps/karakeep/.config
@@ -1,4 +1,5 @@
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_URL=https://bookmarks.imkavin.dev
 KARAKEEP_VERSION=0.28.0
 DB_WAL_MODE=true
 DISABLE_SIGNUPS=true
