--- a/kubernetes/system/kubeseal/helmrelease.yaml
+++ b/kubernetes/system/kubeseal/helmrelease.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kubeseal
-  namespace: homelab
+  namespace: kubeseal
 spec:
   interval: 1h
   chart:
