--- a/kubernetes/system/kubeseal/helmrelease.yaml
+++ b/kubernetes/system/kubeseal/helmrelease.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 1h
   chart:
     spec:
-      chart: sealed-secrets/sealed-secrets
+      chart: sealed-secrets
       version: 2.17.7
       sourceRef:
         kind: HelmRepository
