--- a/kubernetes/apps/littlelink/service.yaml
+++ b/kubernetes/apps/littlelink/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    metallb.io/loadBalancerIPs: 192.168.0.122
+    io.cilium/lb-ipam-ips: 192.168.0.151
   labels:
     io.kompose.service: littlelink-server
   name: littlelink-server
