--- a/kubernetes/system/cert-manager/helmrelease.yaml
+++ b/kubernetes/system/cert-manager/helmrelease.yaml
@@ -10,7 +10,7 @@ spec:
   chartRef:
     kind: OCIRepository
     name: cert-manager
-    namespace: cert-manager
+    namespace: flux-system
   install:
     crds: CreateReplace
   upgrade:
