--- a/kubernetes/system/metrics-server/helmrelease.yaml
+++ b/kubernetes/system/metrics-server/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: metrics-server
-        namespace: kube-system
+        namespace: flux-system
   install:
     remediation:
       retries: -1
