--- a/kubernetes/system/metrics-server/helmrepo.yaml
+++ b/kubernetes/system/metrics-server/helmrepo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: metrics-server
-  namespace: kube-system
+  namespace: flux-system
 spec:
   interval: 1h
   url: https://kubernetes-sigs.github.io/metrics-server/
