Fix ns for kubeseal repos

--- a/kubernetes/system/kubeseal/helmrelease.yaml
+++ b/kubernetes/system/kubeseal/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: sealed-secrets
-        namespace: kubeseal
+        namespace: flux-system
   install:
     remediation:
       retries: -1
