--- a/kubernetes/clusters/homelab/system.yaml
+++ b/kubernetes/clusters/homelab/system.yaml
@@ -4,7 +4,9 @@ metadata:
   name: system
   namespace: flux-system
 spec:
-  interval: 15m
+  dependsOn:
+    - name: namespace-bootstrap
+  interval: 30m
   sourceRef:
     kind: GitRepository
     name: flux-system
