Add reconcileStrategy for ns bootstrap chart

--- a/kubernetes/clusters/homelab/namespaces.yaml
+++ b/kubernetes/clusters/homelab/namespaces.yaml
@@ -9,6 +9,7 @@ spec:
     spec:
       chart: ./kubernetes/charts/namespace-bootstrap
       version: 0.1.0
+      reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
         name: flux-system
