--- a/kubernetes/apps/karakeep/pvc.yaml
+++ b/kubernetes/apps/karakeep/pvc.yaml
@@ -4,19 +4,21 @@ kind: PersistentVolumeClaim
 metadata:
   name: data-pvc
 spec:
+  storageClassName: proxmox-csi-retain
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 100Mi
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: meilisearch-pvc
 spec:
+  storageClassName: proxmox-csi-retain
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 100Mi
