Onboard deploys for reloader

--- a/kubernetes/apps/glance/deploy.yaml
+++ b/kubernetes/apps/glance/deploy.yaml
@@ -3,6 +3,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: glance
+  annotations:
+    reloader.stakater.com/auto: "true"
   labels:
     app.kubernetes.io/name: glance
     app.kubernetes.io/instance: glance
