--- a/kubernetes/system/namespaces.yaml
+++ b/kubernetes/system/namespaces.yaml
@@ -1,7 +1,8 @@
 namespaces:
   - name: cert-manager
   - name: littlelink
+  - name: reloader
   - name: kubeseal
+  - name: security
   - name: pangolin
   - name: karakeep
-  - name: reloader
