Fix dns again and ref in CSS

--- a/kubernetes/system/external-secrets/secret-store.yaml
+++ b/kubernetes/system/external-secrets/secret-store.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider:
     bitwardensecretsmanager:
-      bitwardenServerSDKURL: https://bitwarden-sdk-server.security.svc.cluster.local:9998
+      bitwardenServerSDKURL: https://bitwarden-sdk-server.security.svc:9998
       auth:
         secretRef:
           credentials:
