--- a/kubernetes/apps/karakeep/kustomization.yaml
+++ b/kubernetes/apps/karakeep/kustomization.yaml
@@ -5,6 +5,11 @@ configMapGenerator:
       - .config
     name: karakeep-configuration
 
+labels:
+  - pairs:
+      homelab.imkavin.dev/app: karakeep
+    includeSelectors: false
+
 resources:
   - secret.yaml
   - web.yaml
