--- a/kubernetes/apps/glance/secrets.yaml
+++ b/kubernetes/apps/glance/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   name: pmx-api-ro-token
   namespace: glance
 spec:
-  refreshInterval: 1h0m0s
+  refreshInterval: 1h
   secretStoreRef:
     name: bitwarden-secrets-manager
     kind: ClusterSecretStore
@@ -13,3 +13,33 @@ spec:
     - secretKey: token
       remoteRef:
         key: "pmx-api-ro-user-token"
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: vps-glance-token
+  namespace: glance
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: bitwarden-secrets-manager
+    kind: ClusterSecretStore
+  data:
+    - secretKey: token
+      remoteRef:
+        key: "vps-glance-token"
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: vps-ip-address
+  namespace: glance
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: bitwarden-secrets-manager
+    kind: ClusterSecretStore
+  data:
+    - secretKey: address
+      remoteRef:
+        key: "vps-ip-address"
