feat: Deploy Prometheus and bump worker to 12Gi

--- a/kubernetes/system/kustomization.yaml
+++ b/kubernetes/system/kustomization.yaml
@@ -3,6 +3,7 @@ resources:
   - ./external-secrets
   - ./proxmox-csi
   - ./cert-manager
+  - ./prometheus
   - ./cilium
   - ./reloader
   - ./metrics-server
