--- a/kubernetes/system/kustomization.yaml
+++ b/kubernetes/system/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ./proxmox-csi
   - ./cert-manager
   - ./prometheus
+  - ./grafana
   - ./cilium
   - ./reloader
   - ./metrics-server
