feat: enable alertmanager

--- a/kubernetes/system/prometheus/helmrelease.yaml
+++ b/kubernetes/system/prometheus/helmrelease.yaml
@@ -15,7 +15,7 @@ spec:
     crds:
       enabled: true
     alertmanager:
-      enabled: false
+      enabled: true
     kubeApiServer:
       enabled: true
     kubelet:
