--- a/kubernetes/system/grafana/instance/datasources.yaml
+++ b/kubernetes/system/grafana/instance/datasources.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
@@ -13,3 +14,20 @@ spec:
     access: proxy
     isDefault: true
     url: http://prometheus-operated.monitoring.svc.cluster.local:9090
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDatasource
+metadata:
+  name: alertmanager
+  namespace: monitoring
+spec:
+  instanceSelector:
+    matchLabels:
+      grafana.internal/instance: "homelab"
+  datasource:
+    type: alertmanager
+    name: alertmanager
+    access: proxy
+    jsonData:
+      implementation: prometheus
+    url: http://alertmanager-operated.monitoring.svc.cluster.local:9093
