--- a/kubernetes/system/grafana/instance/bw-secrets.yaml
+++ b/kubernetes/system/grafana/instance/bw-secrets.yaml
@@ -16,3 +16,21 @@ spec:
     - secretKey: GF_SECURITY_ADMIN_PASSWORD
       remoteRef:
         key: "3b3c023d-fa12-42d4-a480-b3c500f3d86a"
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: grafana-slack-token
+  namespace: monitoring
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: bitwarden-secrets-manager
+    kind: ClusterSecretStore
+  target:
+    name: grafana-slack-token
+    creationPolicy: Owner
+  data:
+    - secretKey: token
+      remoteRef:
+        key: "661c11c5-f282-4cc8-9c19-b3c600e90efa"
