feat: Deploy Alertmanager config

--- a/kubernetes/system/grafana/instance/folders.yaml
+++ b/kubernetes/system/grafana/instance/folders.yaml
@@ -5,6 +5,7 @@ metadata:
   name: kubernetes
   namespace: monitoring
 spec:
+  resyncPeriod: 12h
   title: "Kubernetes"
   instanceSelector:
     matchLabels:
