--- a/kubernetes/system/grafana/instance/datasources.yaml
+++ b/kubernetes/system/grafana/instance/datasources.yaml
@@ -5,6 +5,7 @@ metadata:
   name: prometheus
   namespace: monitoring
 spec:
+  resyncPeriod: 12h
   instanceSelector:
     matchLabels:
       grafana.internal/instance: "homelab"
@@ -21,6 +22,7 @@ metadata:
   name: alertmanager
   namespace: monitoring
 spec:
+  resyncPeriod: 12h
   instanceSelector:
     matchLabels:
       grafana.internal/instance: "homelab"
