--- a/kubernetes/system/prometheus/bw-secrets.yaml
+++ b/kubernetes/system/prometheus/bw-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: grafana-admin-creds
+  name: alertmanager-slack-webhook
   namespace: monitoring
 spec:
   refreshInterval: 1h
@@ -10,9 +10,9 @@ spec:
     name: bitwarden-secrets-manager
     kind: ClusterSecretStore
   target:
-    name: grafana-admin-creds
+    name: alertmanager-slack-webhook
     creationPolicy: Owner
   data:
-    - secretKey: GF_SECURITY_ADMIN_PASSWORD
+    - secretKey: url
       remoteRef:
-        key: "3b3c023d-fa12-42d4-a480-b3c500f3d86a"
+        key: "8e61e07c-7d51-4eff-a005-b3c80080476e"
