--- a/kubernetes/system/prometheus/helmrelease.yaml
+++ b/kubernetes/system/prometheus/helmrelease.yaml
@@ -16,6 +16,9 @@ spec:
       enabled: true
     alertmanager:
       enabled: true
+      alertmanagerSpec:
+        alertmanagerConfigMatcherStrategy:
+          type: None
     kubeApiServer:
       enabled: true
     kubelet:
