--- a/kubernetes/system/prometheus/alertmanager.yaml
+++ b/kubernetes/system/prometheus/alertmanager.yaml
@@ -31,3 +31,15 @@ spec:
                   {{- $label.Name }}="{{ $label.Value -}}"
                 {{- end }}
               {{- end -}}
+              )
+            {{- end }}
+          text: >-
+            {{ range .Alerts -}}
+            *Alert:* {{ .Annotations.title }}{{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
+
+            *Description:* {{ .Annotations.description }}
+
+            *Details:*
+              {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+              {{ end }}
+            {{ end }}
