feat: Enable OIDC for Grafana

--- a/kubernetes/system/grafana/instance/bw-secrets.yaml
+++ b/kubernetes/system/grafana/instance/bw-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: grafana-admin-creds
+  name: grafana-secrets
   namespace: monitoring
 spec:
   refreshInterval: 1h
@@ -10,9 +10,21 @@ spec:
     name: bitwarden-secrets-manager
     kind: ClusterSecretStore
   target:
-    name: grafana-admin-creds
+    name: grafana-secrets
     creationPolicy: Owner
   data:
+    - secretKey: GF_AUTH_URL
+      remoteRef:
+        key: "93718e0b-4f9c-4899-8a9a-b3ce0076158f"
+    - secretKey: GF_OIDC_CLIENT_SECRET
+      remoteRef:
+        key: "c434fdcd-6596-4ccb-9b19-b3ce011778e3"
+    - secretKey: GF_DOMAIN
+      remoteRef:
+        key: "37d80bcf-8508-4f59-a044-b3ce013c88a7"
+    - secretKey: GF_SECURITY_ADMIN_USER
+      remoteRef:
+        key: "c92b7062-fb75-43cb-a6fe-b3ce013c5aa8"
     - secretKey: GF_SECURITY_ADMIN_PASSWORD
       remoteRef:
         key: "3b3c023d-fa12-42d4-a480-b3c500f3d86a"
