--- a/kubernetes/system/namespaces.yaml
+++ b/kubernetes/system/namespaces.yaml
@@ -7,6 +7,7 @@ namespaces:
   - name: pangolin
   - name: karakeep
   - name: glance
+  - name: cnpg-system
   - name: monitoring
     labels:
       pod-security.kubernetes.io/enforce: privileged
