feat: Deploy Blinko and refactor postgres

--- a/kubernetes/apps/postgres/kustomization.yaml
+++ b/kubernetes/apps/postgres/kustomization.yaml
@@ -1,3 +1,10 @@
+namespace: postgres
+
+labels:
+  - pairs:
+      homelab.imkavin.dev/app: postgres
+    includeSelectors: false
+
 resources:
   - cluster.yaml
   - pod-monitor.yaml
