--- a/kubernetes/system/namespaces.yaml
+++ b/kubernetes/system/namespaces.yaml
@@ -9,6 +9,7 @@ namespaces:
   - name: glance
   - name: cnpg-system
   - name: postgres
+  - name: blinko
   - name: monitoring
     labels:
       pod-security.kubernetes.io/enforce: privileged
