feat: Monitor OpenWRT router using Grafana

--- a/kubernetes/system/grafana/instance/dashboards.yaml
+++ b/kubernetes/system/grafana/instance/dashboards.yaml
@@ -142,3 +142,19 @@ spec:
     - datasourceName: prometheus
       inputName: DS_PROMETHEUS
   url: "https://raw.githubusercontent.com/cloudnative-pg/grafana-dashboards/refs/heads/main/charts/cluster/grafana-dashboard.json"
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: opennwrt
+  namespace: monitoring
+spec:
+  resyncPeriod: 12h
+  folder: "Homelab"
+  instanceSelector:
+    matchLabels:
+      grafana.internal/instance: homelab
+  datasources:
+    - datasourceName: prometheus
+      inputName: DS_PROMETHEUS
+  url: "https://grafana.com/api/dashboards/18153/revisions/4/download"
