--- a/kubernetes/system/prometheus/helmrelease.yaml
+++ b/kubernetes/system/prometheus/helmrelease.yaml
@@ -31,6 +31,12 @@ spec:
       enabled: false
     prometheus:
       prometheusSpec:
+        additionalScrapeConfigs:
+        - job_name: OpenWRT
+          metrics_path: /metrics
+          static_configs:
+            - targets:
+              - 192.168.10.1:9100
         replicas: 1
         retention: 14d
         resources:
