--- a/kubernetes/apps/karakeep/chrome.yaml
+++ b/kubernetes/apps/karakeep/chrome.yaml
@@ -16,6 +16,12 @@ spec:
       containers:
         - name: chrome
           image: gcr.io/zenika-hub/alpine-chrome:124
+          resources:
+            requests:
+              cpu: 10m
+              memory: 300Mi
+            limits:
+              memory: 500Mi
           command:
             - chromium-browser
             - --headless
