--- a/kubernetes/clusters/homelab/apps.yaml
+++ b/kubernetes/clusters/homelab/apps.yaml
@@ -1,16 +1,16 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: apps
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: system
-  interval: 30m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./kubernetes/apps
-  prune: true
-  wait: true
-  timeout: 5m0s
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: apps
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: system
+#   interval: 30m
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   path: ./kubernetes/apps
+#   prune: true
+#   wait: true
+#   timeout: 5m0s
