feat: Added core-deps kustomization and refactor depends_on

--- a/kubernetes/system/kustomization.yaml
+++ b/kubernetes/system/kustomization.yaml
@@ -1,11 +1,7 @@
 resources:
-  - ./kubeseal
-  - ./external-secrets
   - ./proxmox-csi
-  - ./cert-manager
   - ./prometheus
   - ./grafana
-  - ./cilium
   - ./reloader
   - ./metrics-server
-  - ./pangolin
+  # - ./pangolin
