--- a/kubernetes/clusters/homelab/system.yaml
+++ b/kubernetes/clusters/homelab/system.yaml
@@ -1,3 +1,19 @@
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: core-dependencies
+  namespace: flux-system
+spec:
+  interval: 30m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./kubernetes/core-dependencies
+  prune: true
+  wait: true
+  timeout: 5m0s
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
