--- a/kubernetes/core-dependencies/external-secrets/helmrelease.yaml
+++ b/kubernetes/core-dependencies/external-secrets/helmrelease.yaml
@@ -4,6 +4,11 @@ metadata:
   name: eso
   namespace: security
 spec:
+  dependsOn:
+    - name: kubeseal
+      namespace: kubeseal
+    - name: cert-manager
+      namespace: cert-manager
   interval: 1h
   chart:
     spec:
