--- a/kubernetes/system/cert-manager/flux-ks.yaml
+++ b/kubernetes/system/cert-manager/flux-ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: prometheus
-  namespace: monitoring
+  name: cert-manager
+  namespace: cert-manager
 spec:
-  targetNamespace: monitoring
+  targetNamespace: cert-manager
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/system/prometheus/operator
+  path: ./kubernetes/system/cert-manager
   prune: true
   sourceRef:
     kind: GitRepository
@@ -19,17 +19,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: prometheus-configs
-  namespace: monitoring
+  name: cert-manager-configs
+  namespace: cert-manager
 spec:
   dependsOn:
-    - name: prometheus
-    - name: external-secrets
-      namespace: external-secrets
-  targetNamespace: monitoring
+    - name: cert-manager
+  targetNamespace: cert-manager
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/system/prometheus/configs
+  path: ./kubernetes/system/cert-manager/configs
   prune: true
   sourceRef:
     kind: GitRepository
