--- a/kubernetes/system/external-secrets/flux-ks.yaml
+++ b/kubernetes/system/external-secrets/flux-ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: prometheus
-  namespace: monitoring
+  name: external-secrets
+  namespace: external-secrets
 spec:
-  targetNamespace: monitoring
+  targetNamespace: external-secrets
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/system/prometheus/operator
+  path: ./kubernetes/system/external-secrets
   prune: true
   sourceRef:
     kind: GitRepository
@@ -19,17 +19,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: prometheus-configs
-  namespace: monitoring
+  name: external-secrets-configs
+  namespace: external-secrets
 spec:
   dependsOn:
-    - name: prometheus
     - name: external-secrets
-      namespace: external-secrets
-  targetNamespace: monitoring
+  targetNamespace: external-secrets
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/system/prometheus/configs
+  path: ./kubernetes/system/external-secrets/configs
   prune: true
   sourceRef:
     kind: GitRepository
