--- a/kubernetes/system/grafana/kustomization.yaml
+++ b/kubernetes/system/grafana/kustomization.yaml
@@ -1,3 +1,38 @@
-resources:
-  - ./operator
-  - ./instance
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: grafana-operator
+  namespace: monitoring
+spec:
+  targetNamespace: monitoring
+  interval: 30m
+  timeout: 5m
+  path: ./kubernetes/system/grafana/operator
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  wait: false
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: grafana
+  namespace: monitoring
+spec:
+  dependsOn:
+    - name: grafana-operator
+    - name: external-secrets
+      namespace: external-secrets
+  targetNamespace: monitoring
+  interval: 30m
+  timeout: 5m
+  path: ./kubernetes/system/grafana/instance
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  wait: false
