--- a/kubernetes/system/external-secrets/configs/certs.yaml
+++ b/kubernetes/system/external-secrets/configs/certs.yaml
@@ -3,13 +3,12 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: bitwarden-sdk-server
-  namespace: security
 spec:
   commonName: bitwarden-sdk-server
   dnsNames:
     - bitwarden-sdk-server
-    - bitwarden-sdk-server.security
-    - bitwarden-sdk-server.security.svc
+    - bitwarden-sdk-server.external-secrets
+    - bitwarden-sdk-server.external-secrets.svc
   duration: 8760h0m0s
   issuerRef:
     group: cert-manager.io
