feat: add oauth support for karakeep

--- a/kubernetes/apps/karakeep/secret.yaml
+++ b/kubernetes/apps/karakeep/secret.yaml
@@ -24,3 +24,12 @@ spec:
     - secretKey: NEXTAUTH_URL
       remoteRef:
         key: "karakeep-nextauth-url"
+    - secretKey: OAUTH_CLIENT_SECRET
+      remoteRef:
+        key: "karakeep-oauth-client-secret"
+    - secretKey: OAUTH_CLIENT_ID
+      remoteRef:
+        key: "karakeep-oauth-client"
+    - secretKey: OAUTH_WELLKNOWN_URL
+      remoteRef:
+        key: "karakeep-oauth-wk-url"
