--- a/kubernetes/apps/karakeep/.config
+++ b/kubernetes/apps/karakeep/.config
@@ -2,3 +2,5 @@ NEXTAUTH_URL_INTERNAL=http://localhost:3000
 KARAKEEP_VERSION=0.28.0
 DB_WAL_MODE=true
 DISABLE_SIGNUPS=true
+DISABLE_PASSWORD_AUTH=true
+OAUTH_PROVIDER_NAME=Pocket-ID
