feat: Deploy Kagent init ver

--- a/kubernetes/system/kustomization.yaml
+++ b/kubernetes/system/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./grafana/flux-ks.yaml
   - ./proxmox-csi/flux-ks.yaml
   - ./pangolin/flux-ks.yaml
+  - ./kagent/flux-ks.yaml
   - ./cnpg-system
   - ./reloader
   - ./metrics-server
