--- a/kubernetes/system/kagent/secrets.yaml
+++ b/kubernetes/system/kagent/secrets.yaml
@@ -18,3 +18,6 @@ spec:
     - secretKey: GEMINI_API_KEY
       remoteRef:
         key: "kagent-gemini-secret"
+    - secretKey: ANTHROPIC_API_KEY
+      remoteRef:
+        key: "kagent-anthropic-secret"
