--- a/kubernetes/system/kagent/secrets.yaml
+++ b/kubernetes/system/kagent/secrets.yaml
@@ -21,3 +21,6 @@ spec:
     - secretKey: ANTHROPIC_API_KEY
       remoteRef:
         key: "kagent-anthropic-secret"
+    - secretKey: GH_PAT_TOKEN
+      remoteRef:
+        key: "kagent-gh-mcp-pat"
