--- a/kubernetes/system/kagent/secrets.yaml
+++ b/kubernetes/system/kagent/secrets.yaml
@@ -21,6 +21,20 @@ spec:
     - secretKey: ANTHROPIC_API_KEY
       remoteRef:
         key: "kagent-anthropic-secret"
-    - secretKey: GH_PAT_TOKEN
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: github-mcp-server
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: bitwarden-secrets-manager
+    kind: ClusterSecretStore
+  target:
+    name: github-mcp-server
+    creationPolicy: Owner
+  data:
+    - secretKey: GITHUB_PERSONAL_ACCESS_TOKEN
       remoteRef:
         key: "kagent-gh-mcp-pat"
