--- a/kubernetes/system/kustomization.yaml
+++ b/kubernetes/system/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./proxmox-csi/flux-ks.yaml
   - ./pangolin/flux-ks.yaml
   - ./kagent/flux-ks.yaml
+  - ./fluxcd-configs/flux-ks.yaml
   - ./cnpg-system
   - ./reloader
   - ./metrics-server
